@@ -1,6 +1,7 @@
 CHANGELOG RoundCube Webmail
 ===========================
 
+- Reviewed/fixed skip_deleted/read_when_deleted/flag_for_deletion options handling in UI
 - Fix displaying of big maximum upload filesize (#1485889)
 - Added possibility to invert messages selection
 - After move/delete from 'show' action display next message instead of messages list (#1485887)
